--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
         <section id='resume'>
 
             <h2 class="sectionHeader">Resume</h2>
+
+            <p class="return"><a href="Developer Resume.zip">Download Resume</a></p>
             
             <div id='tools'>
                     <span><i class="fab fa-js-square"></i></span>
@@ -183,7 +185,9 @@
             
             <footer>
                 <span class="summary">(678) 984-0058</span>
-                <span class="summar">&#x25C8</span>
+                <span class="summary">&#x25C8</span>
+                <span class="return gold"><a href="Developer Resume.zip">Download Resume</a></span>
+                <span class="summary">&#x25C8</span>
                 <span class="summary">donna.bradshaw.developer@gmail.com</span>
             </footer>
 
