--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
             </div>
 
             <div id="thumbnails">
-                <a class="nail" href="" id='project1'>
+                <a class="nail" href="http://beautybox.donnab.info" id='project1' target="_blank">
                     <p class='project-text'>Project 1</p>
                     <p class='project-text'>A demo beauty subscription site utilizing Vue.js and Sass</p>
                 </a>
 
-                <a class="nail" href="" id='project2'>
+                <a class="nail" href="http://noteboard.donnab.info" id='project2' target="_blank">
                     <p class='project-text'>Project 2</p>
                     <p class='project-text'>A demo note board site utilizing the MERN stack, along with Redux. You can use "demo" as the username and password to login.</p>
                 </a>
 
-                <a class="nail" href="" id='project3'>
+                <a class="nail" href="http://cryptopair.donnab.info" id='project3' target="_blank">
                     <p class='project-text'>Project 3</p>
                     <p class='project-text'>A cryptocurrency application that utilizes data from a third-party API</p>
                 </a>
@@ -87,7 +87,7 @@
 
             <h2 class="sectionHeader">Resume</h2>
 
-            <p class="return"><a href="Developer Resume.zip">Download Resume</a></p>
+            <p class="return"><a href="Donna-B-Resume.zip">Download Resume</a></p>
             
             <div id='tools'>
                     <span><i class="fab fa-js-square"></i></span>
@@ -186,7 +186,7 @@
             <footer>
                 <span class="summary">(678) 984-0058</span>
                 <span class="summary">&#x25C8</span>
-                <span class="return gold"><a href="Developer Resume.zip">Download Resume</a></span>
+                <span class="return gold"><a href="Donna-B-Resume.zip">Download Resume</a></span>
                 <span class="summary">&#x25C8</span>
                 <span class="summary">donna.bradshaw.developer@gmail.com</span>
             </footer>
