--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link rel="shortcut icon" href="./media/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="portfolio.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 
@@ -155,7 +156,7 @@
                     <span class='classification'>Independence / Dependability / Leadership: Minimal oversight required to find creative problem-solving measures & to produce deliverables in a timely manner. Able to take the helm of a project or initiative to ensure goals and objectives are met.</span>
                     <ul>
                         <li>
-                            <p>(Remote Support Agent– 2013 – 2015) –Selected as a tech agent among others for final phase of a legacy fitness device. Company was bought out. During this phase, quickly learned device to provide support to existing customers, became team lead, created documentation, training materials, & reports until successful phase out of device the & the department.</p>
+                            <p>(Remote Support Agent– 2013 – 2015) –Selected as a tech agent among others for final phase of a legacy fitness device. Company was bought out. During this phase, quickly learned device to provide support to existing customers, became team lead, created documentation, training materials, & reports until successful phase out of the device & the department.</p>
                         </li>
 
                         <li>
