--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <h2 class="sectionHeader">Resume</h2>
 
-            <p class="return"><a href="Donna-B-Resume.zip">Download Resume</a></p>
+            <p class="return"><a href="Donna Bradshaw Developer Resume.zip">Download Resume</a></p>
             
             <div id='tools'>
                     <span><i class="fab fa-js-square"></i></span>
@@ -187,7 +187,7 @@
             <footer>
                 <span class="summary">(678) 984-0058</span>
                 <span class="summary">&#x25C8</span>
-                <span class="return gold"><a href="Donna-B-Resume.zip">Download Resume</a></span>
+                <span class="return gold"><a href="Donna Bradshaw Developer Resume.zip">Download Resume</a></span>
                 <span class="summary">&#x25C8</span>
                 <span class="summary">donna.bradshaw.developer@gmail.com</span>
             </footer>
